# epubox

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  analyze_html.py  main.py  progress.json  pyproject.toml  pytest.ini  requirements.txt  test.html  test_translate.py  translate.py  translate_book.py  translate_epub.py  translate_epub_ncx.py
alembic/: env.py
alembic/versions/: 018e5d9ab2f3_initial_migration.py  283b9ca95921_add_epub_files_table.py  5cf4ecea524a_add_user.py  6d1dd08e227b_add_translation_system_tables.py  77bd9bb8c099_initial_migration.py  ccb190b2f5cd_update_user_model.py
app/: main.py
app/api/: __init__.py  deps.py
app/auth/: __init__.py  backend.py  manager.py  users.py
app/core/: auth.py  config.py  database.py  dependencies.py  epub_utils.py  errors.py  exceptions.py  logging.py  security.py  types.py  validation.py
app/crud/: __init__.py  base.py  epub_file.py
app/db/: all_models.py  base.py  base_class.py  models.py  session.py
app/docs/: api.py  schemas.py
app/epub/: __init__.py  processor.py  utils.py
app/html/: B21025_FM.xhtml  __init__.py  attr_processor.py  processor.py  processor1.py  restored.xhtml  tree.py  tree2.py
app/middleware/: __init__.py  error_handler.py  logging.py  rate_limit.py
app/models/: __init__.py  base.py  base_model.py  cost_record.py  epub_file.py  file.py  oauth.py  oauth_account.py  storage.py  translation.py  translation_chunk.py  translation_memory.py  translation_progress.py  translation_project.py  user.py
app/progress/: manager.py
app/repositories/: base.py  user.py
app/routers/: __init__.py  storage.py  task.py
app/schemas/: __init__.py  auth.py  epub_file.py  storage.py  task.py  translation.py  user.py
app/service/: storage.py
app/services/: base.py  epub_parser.py  epub_processor.py  file_metadata_service.py  file_service.py  html_splitter.py  rate_limiter.py  task.py  user.py  user_service.py
app/storages/: parser.py  upload.py
app/tasks/: __init__.py  manager.py
app/translation/: __init__.py  errors.py  factory.py  manager.py  models.py
app/users/: manager.py
docs/: README.md  design.md  epub_translation_implementation.md  二级占位符方案设计.md  任务规划.md  设计文档.md  重构文档.md
engine/: constant.py  orchestrator.py
migrations/: env.py
scripts/: check_db.py  init_db.py
services/: base.py  utils.py
tests/: chapter1.xhtml  check_epub.py  conftest.py  epub_translation.py  mocks.py  test.epub.progress.json  test.xhtml  test_api.py  test_auth.py  test_epub_parser.py  test_epub_processor.py  test_html_translation.py  test_integration.py  test_orchestrator.py  test_progress_manager.py  test_translation.py  test_translator.py  test_utils.py  toc.ncx
tools/: manager.py  parser.py
translators/: __init__.py  googletranslator.py
utils/: logging.py
(+233 files in other folders)
