[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epubox"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A web-based EPUB translation service"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "strict"
