[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "epubox"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.12"
dependencies = [
    "agno>=2.6.0",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "ebooklib>=0.20",
    "fastapi>=0.136.1",
    "google-genai>=1.73.1",
    "httpx>=0.28.1",
    "mistralai>=2.4.2",
    "nltk>=3.9.4",
    "openai>=2.32.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "scikit-learn>=1.8.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "typer>=0.24.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 119
target-version = "py312"
extend-exclude = [".claude/worktrees"]

[tool.ruff.format]
# 可选格式化相关配置（ruff formatter 从 0.4+ 开始支持）
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 100

[tool.pytest]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
extend-safe-fixes = ["E", "F401"]

[tool.coverage.run]
source = ["engine"]
omit = [
    "*/tests/*",
    "*/services/glossary.py",  # 需要外部 EPUB 和 NLTK，难以单元测试
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
